[MDR-22] Fixing Amit's problems with the upload component. The problem was to try to read multiple time from the same input stream. Fixed. Also fixed all the failing tests.